removed vgwas section

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -246,16 +246,21 @@ The basis \gls{gwas} studies is to identify \glspl{snp} that are associated with
 
 The use of additional methods that capture additional loci with non-additive effects should be able to explain more of missing heritability. When the ratio of explained heritability to total heritability is < 1, it is defined as missing heritability [@Zuk2012]. Explained heritability is defined as the proportion of heritability or phenotypic variance explained by a collection of genetic variants. Total heritability is inferred from population data. Missing heritability infers there are additional loci that contribute to the phenotypic variance that are yet to be discovered. 
 
-### Non-additive Variance
 
-The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. The incorporation of selection statistics or a \gls{vgwas} results has the potential to inform \gls{gwas} since these extra results capture some of the non-additive effects and variance that may be influencing a locus. When \gls{ld} between observed \glspl{snp} and causal variants is high, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013]. To attempt to capture this non-additive variance, \gls{vgwas} can be performed. This uses the phenotypic variance, instead of mean, in the phenotype by genotype regression model. This method captures not just additive effects but also alternative methods of genetic influence [@Pare2010]. Additional work is required to determine if it is gene-gene or gene-environment interactions that are the cause of this variation, such as a gene by gene or gene by environment interaction analysis focussing on the top results from the \gls{vgwas}.
+> The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006].
 
-Important issues to bear in mind when using \gls{vgwas} include the size of a dataset, imbalance between cases and controls, and test statistics becoming inflated when minor allele frequency is small [@Yang2012]. A large dataset is often needed in order to be able to detect small differences in variance between groups. Imbalance in the data can appear as too many cases or controls but also in allele frequency. If there are not enough samples in an affection or allele group then the test statistic gets inflated due to sampling bias. For rare alleles this can require very large sample sizes to compensate.
+> When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
 
-#### Transformation of Variance
+<!-- ### Non-additive Variance -->
 
-A key consideration when investigating the variance of a dataset is the importance of ensuring that the differences in variance cannot be explained by performing transformations on the data, such as log or inverse normal transformations [@Sun2013]. @Shen2013 agreed with the principle of doing transformations but note that it is also very important for the transformations to make biological sense. For example, even though the scales are arbitrary
-biologically for \gls{bmi} or height it doesn't make sense to have a larger difference between a \gls{bmi} of 21 and 22 than between 24 and 25.
+<!--  The incorporation of selection statistics or a \gls{vgwas} results has the potential to inform \gls{gwas} since these extra results capture some of the non-additive effects and variance that may be influencing a locus.  To attempt to capture this non-additive variance, \gls{vgwas} can be performed. This uses the phenotypic variance, instead of mean, in the phenotype by genotype regression model. This method captures not just additive effects but also alternative methods of genetic influence [@Pare2010]. Additional work is required to determine if it is gene-gene or gene-environment interactions that are the cause of this variation, such as a gene by gene or gene by environment interaction analysis focussing on the top results from the \gls{vgwas}. -->
+
+<!-- Important issues to bear in mind when using \gls{vgwas} include the size of a dataset, imbalance between cases and controls, and test statistics becoming inflated when minor allele frequency is small [@Yang2012]. A large dataset is often needed in order to be able to detect small differences in variance between groups. Imbalance in the data can appear as too many cases or controls but also in allele frequency. If there are not enough samples in an affection or allele group then the test statistic gets inflated due to sampling bias. For rare alleles this can require very large sample sizes to compensate. -->
+
+<!-- #### Transformation of Variance -->
+
+<!-- A key consideration when investigating the variance of a dataset is the importance of ensuring that the differences in variance cannot be explained by performing transformations on the data, such as log or inverse normal transformations [@Sun2013]. @Shen2013 agreed with the principle of doing transformations but note that it is also very important for the transformations to make biological sense. For example, even though the scales are arbitrary -->
+<!-- biologically for \gls{bmi} or height it doesn't make sense to have a larger difference between a \gls{bmi} of 21 and 22 than between 24 and 25. -->
 
 ### Selection and GWAS
 
@@ -278,6 +283,8 @@ There was also a high association of highly differentiated sites with genes and 
 The inclusion of Oceanic populations in multi-population studies has had a focus on genetic structure, measured via F~ST~ for differentiation, rather than selection [@Friedlaender2008; @Tennessen2011]. The migratory history of Polynesian populations suggests that the points of differentiation are likely the events possibly occurring since the out of Africa dispersal at ~60,000 years ago [@Soares2012] with settlement of Near Oceania ~40,000 years ago, and Remote Oceania ~3,100 years ago [@Matisoo-Smith2004] and the Polynesian triangle ~1,000-1,200 years ago [@Wilmshurst2011]. The time frame for these events means that nearly all of the previously mentioned methods would still be within their powered time frames to detect selective events. The haplotypic methods would possibly not be able to detect selective events as old as the Africa dispersal and may be at the fringe of the time period for the Near Oceania settlement. 
 
 Large population comparison studies have used Oceanic populations but analyses were limited to Melanesians and Papuan populations because of their inclusion in the Human Genome Diversity Project [@Cann2002]. The Melanesian and Papuan populations are often used to infer the genetics of Polynesian populations. This extrapolation doesn't take into account the current ancestry predictions of Polynesians populations being more closely related to Asian/Taiwanese Aboriginal populations than Melanesian groups, and the presence of European admixture [@Friedlaender2008]. The genomic DNA and mitochondrial DNA suggest Polynesians have East Asian ancestry, with a large male Melanesian admixture [@Kayser2008a]. There has been limited analyses of selection in Polynesian populations beyond @Kimura2008, where 24 Tongan samples in conjunction with other populations were analysed using both F~ST~ and a modified \gls{ehh} test. Regions with evidence of having been selected in the Tongans were potential candidates for increased fat, muscle and bone masses.
+
+> @Cadzow2016 and @Minster2016
 
 ### Gout and Metabolic Syndrome {#goutMetSyn}
 
